[metadata]
name = message_broker
version = 0.5.0
author = Fredrik Larsson
author_email = ekerim@gmail.com
description = A simple thread-safe in-app pub/sub message broker module.
long_description = file: README.md
long_description_content_type = text/markdown
license = LGPL-3.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6